--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,15 +126,33 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+\n",
+      "|Average_Price|\n",
+      "+-------------+\n",
+      "|    299661.01|\n",
+      "+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
-    "\n"
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM homes\n",
+    "          WHERE bedrooms=4\n",
+    "          ''').show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -142,15 +160,43 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+\n",
+      "|Year_Built|Average_Price|\n",
+      "+----------+-------------+\n",
+      "|      2010|    292859.62|\n",
+      "|      2011|    291117.47|\n",
+      "|      2012|    293683.19|\n",
+      "|      2013|    295962.27|\n",
+      "|      2014|    290852.27|\n",
+      "|      2015|     288770.3|\n",
+      "|      2016|    290555.07|\n",
+      "|      2017|    292676.79|\n",
+      "+----------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
-    "\n"
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            date_built as Year_Built,\n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM homes\n",
+    "          WHERE bedrooms=3 AND bathrooms=3\n",
+    "          GROUP BY date_built\n",
+    "          ORDER BY date_built asc\n",
+    "          ''').show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -158,11 +204,39 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+\n",
+      "|Year_Built|Average_Price|\n",
+      "+----------+-------------+\n",
+      "|      2010|    285010.22|\n",
+      "|      2011|    276553.81|\n",
+      "|      2012|    307539.97|\n",
+      "|      2013|    303676.79|\n",
+      "|      2014|    298264.72|\n",
+      "|      2015|    297609.97|\n",
+      "|      2016|     293965.1|\n",
+      "|      2017|    280317.58|\n",
+      "+----------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  5. What is the average price of a home for each year built that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
-    "\n"
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            date_built as Year_Built,\n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM homes\n",
+    "          WHERE bedrooms=3 AND bathrooms=3 AND floors=2 AND sqft_living >= 2000\n",
+    "          GROUP BY date_built\n",
+    "          ORDER BY date_built asc\n",
+    "          ''').show()\n"
    ]
   },
   {
