--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -19,21 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "id": "2XbWNf1Te5fM"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/28 19:14:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import packages\n",
     "from pyspark.sql import SparkSession\n",
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -58,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/08/28 19:26:29 WARN SparkContext: The path https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv has been added already. Overwriting of added paths is not supported in the current version.\n"
+      "23/08/28 22:11:54 WARN SparkContext: The path https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv has been added already. Overwriting of added paths is not supported in the current version.\n"
      ]
     },
     {
@@ -106,19 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "homes_df.createOrReplaceTempView('homes')\n"
+    "homes_df.createOrReplaceTempView('home_sales')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -145,14 +135,14 @@
     "spark.sql('''\n",
     "          SELECT \n",
     "            ROUND(AVG(price), 2) as Average_Price\n",
-    "          FROM homes\n",
+    "          FROM home_sales\n",
     "          WHERE bedrooms=4\n",
     "          ''').show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -187,7 +177,7 @@
     "          SELECT \n",
     "            date_built as Year_Built,\n",
     "            ROUND(AVG(price), 2) as Average_Price\n",
-    "          FROM homes\n",
+    "          FROM home_sales\n",
     "          WHERE bedrooms=3 AND bathrooms=3\n",
     "          GROUP BY date_built\n",
     "          ORDER BY date_built asc\n",
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -232,7 +222,7 @@
     "          SELECT \n",
     "            date_built as Year_Built,\n",
     "            ROUND(AVG(price), 2) as Average_Price\n",
-    "          FROM homes\n",
+    "          FROM home_sales\n",
     "          WHERE bedrooms=3 AND bathrooms=3 AND floors=2 AND sqft_living >= 2000\n",
     "          GROUP BY date_built\n",
     "          ORDER BY date_built asc\n",
@@ -241,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -249,21 +239,62 @@
     "id": "GUrfgOX1pCRd",
     "outputId": "17c25774-855e-4290-a4bd-a04902bdc13a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|Average_Price|\n",
+      "+----+-------------+\n",
+      "|  31|    399856.95|\n",
+      "|  85|   1056336.74|\n",
+      "|  65|    736679.93|\n",
+      "|  53|     755214.8|\n",
+      "|  78|   1080649.37|\n",
+      "|  34|    401419.75|\n",
+      "|  81|   1053472.79|\n",
+      "|  28|    402124.62|\n",
+      "|  76|   1058802.78|\n",
+      "|  26|    401506.97|\n",
+      "|  27|    399537.66|\n",
+      "|  44|    400598.05|\n",
+      "|  12|    401501.32|\n",
+      "|  91|   1137372.73|\n",
+      "|  22|    402022.68|\n",
+      "|  93|   1026006.06|\n",
+      "|  47|     398447.5|\n",
+      "|   1|    401044.25|\n",
+      "|  52|    733780.26|\n",
+      "|  13|    398917.98|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 0.27228784561157227 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
     "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            view,\n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM home_sales\n",
+    "          WHERE price >= 350000\n",
+    "          GROUP BY view\n",
+    "          ''').show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -273,12 +304,13 @@
    },
    "outputs": [],
    "source": [
-    "# 7. Cache the the temporary table home_sales.\n"
+    "# 7. Cache the the temporary table home_sales.\n",
+    "spark.catalog.cacheTable(\"home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -286,7 +318,18 @@
     "id": "4opVhbvxtL-i",
     "outputId": "38ec8487-795f-4550-b50c-fcc6f2b7c769"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. Check if the table is cached.\n",
     "spark.catalog.isCached('home_sales')"
@@ -294,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -302,54 +345,120 @@
     "id": "5GnL46lwTSEk",
     "outputId": "09a16c73-194d-4371-95d1-ee64fe83b91c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 67:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|Average_Price|\n",
+      "+----+-------------+\n",
+      "|  31|    399856.95|\n",
+      "|  85|   1056336.74|\n",
+      "|  65|    736679.93|\n",
+      "|  53|     755214.8|\n",
+      "|  78|   1080649.37|\n",
+      "|  34|    401419.75|\n",
+      "|  81|   1053472.79|\n",
+      "|  28|    402124.62|\n",
+      "|  76|   1058802.78|\n",
+      "|  26|    401506.97|\n",
+      "|  27|    399537.66|\n",
+      "|  44|    400598.05|\n",
+      "|  12|    401501.32|\n",
+      "|  91|   1137372.73|\n",
+      "|  22|    402022.68|\n",
+      "|  93|   1026006.06|\n",
+      "|  47|     398447.5|\n",
+      "|   1|    401044.25|\n",
+      "|  52|    733780.26|\n",
+      "|  13|    398917.98|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 1.359011173248291 seconds ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# 9. Using the cached data, run the query that filters out the view ratings with average price \n",
     "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            view,\n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM home_sales\n",
+    "          WHERE price >= 350000\n",
+    "          GROUP BY view\n",
+    "          ''').show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n"
+    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n",
+    "homes_df.write.partitionBy(\"date_built\").mode(\"overwrite\").parquet(\"home_sales_partitioned\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
    "outputs": [],
    "source": [
-    "# 11. Read the formatted parquet data.\n"
+    "# 11. Read the formatted parquet data.\n",
+    "p_homes_df = spark.read.parquet(\"home_sales_partitioned\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
    "outputs": [],
    "source": [
-    "# 12. Create a temporary table for the parquet data.\n"
+    "# 12. Create a temporary table for the parquet data.\n",
+    "p_homes_df.createOrReplaceTempView(\"p_home_sales_p\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -357,7 +466,41 @@
     "id": "G_Vhb52rU1Sn",
     "outputId": "a0b8d0c4-55ed-4c6c-bfd8-4c8c5334838e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|Average_Price|\n",
+      "+----+-------------+\n",
+      "|  31|    399856.95|\n",
+      "|  85|   1056336.74|\n",
+      "|  65|    736679.93|\n",
+      "|  53|     755214.8|\n",
+      "|  78|   1080649.37|\n",
+      "|  34|    401419.75|\n",
+      "|  81|   1053472.79|\n",
+      "|  28|    402124.62|\n",
+      "|  76|   1058802.78|\n",
+      "|  26|    401506.97|\n",
+      "|  27|    399537.66|\n",
+      "|  44|    400598.05|\n",
+      "|  12|    401501.32|\n",
+      "|  91|   1137372.73|\n",
+      "|  22|    402022.68|\n",
+      "|  93|   1026006.06|\n",
+      "|  47|     398447.5|\n",
+      "|   1|    401044.25|\n",
+      "|  52|    733780.26|\n",
+      "|  13|    398917.98|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 0.3699190616607666 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 13. Run the query that filters out the view ratings with average price of greater than or eqaul to $350,000 \n",
     "# with the parquet DataFrame. Round your average to two decimal places. \n",
@@ -365,14 +508,21 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "spark.sql('''\n",
+    "          SELECT \n",
+    "            view,\n",
+    "            ROUND(AVG(price), 2) as Average_Price\n",
+    "          FROM home_sales\n",
+    "          WHERE price >= 350000\n",
+    "          GROUP BY view\n",
+    "          ''').show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -382,12 +532,13 @@
    },
    "outputs": [],
    "source": [
-    "# 14. Uncache the home_sales temporary table.\n"
+    "# 14. Uncache the home_sales temporary table.\n",
+    "spark.catalog.uncacheTable(\"home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -395,10 +546,21 @@
     "id": "Sy9NBvO7tlmm",
     "outputId": "be73e0e3-5e85-4794-aad9-025fb6fa84a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "spark.catalog.isCached('home_sales')\n"
    ]
   },
   {
